--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
-version: 2
+version: 2.1
 jobs: 
-  node: 
+  build:
     docker:
       - image: circleci/node:8
     steps: 
@@ -23,7 +23,7 @@ jobs:
             yarn run test
           environment: 
             JEST_JUNIT_OUTPUT: test-results/jest/junit.xml
-            
+
       - store_test_results: 
           path: test-results
 
