restore cache post save_cache step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,4 +16,8 @@ jobs:
           paths: 
             - ~/.cache/yarn
 
+      - restore_cache: 
+          key: yarn-v1-{{ checksum "yarn.lock" }}-{{ arch }}
+
+
 
