git cache for branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,20 @@ jobs:
 
       - restore_cache: 
           key: yarn-v1-{{ checksum "yarn.lock" }}-{{ arch }}
+
+      - restore_cache:
+          keys:
+            - source-v1-{{ .Branch }}-{{ .Revision }}
+            - source-v1-{{ .Branch }}-
+            - source-v1-
+
+      - checkout
+
+      - save_cache:
+          key: source-v1-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - ".git"
+
   hello-world: 
     docker: 
       - image: circleci/node:8
