--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
     executor: my-executor
     steps:
       - attach_workspace:
-          at: /workspace
+          at: workspace
 
       - run: |
           if [[ `cat /workspace/echo-output` == "Hello, world!" ]]; then
