--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           at: workspace
 
       - run: |
-          if [[ `cat /workspace/echo-output` == "Hello, world!" ]]; then
+          if [[ `cat workspace/echo-output` == "Hello, world!" ]]; then
             echo "It worked!";
           else
             echo "Nope!"; exit 1
