--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "sass": "^1.26.3"
+    "sass": "^1.26.3",
+    "surge": "^0.21.3"
   },
   "scripts": {
     "start": "react-scripts start",
