changed homepage in hopes or working

--- a/package.json
+++ b/package.json
@@ -48,5 +48,5 @@
   "bugs": {
     "url": "https://github.com/rebekahwhittle/jesslev/issues"
   },
-  "homepage": "https://github.com/rebekahwhittle/jesslev#readme"
+  "homepage": "https://jesslev.herokuapp.com/"
 }
