--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,14 +113,14 @@ workflows:
           type: approval
           filters:
             branches:
-              only: master
+              only: main
           requires:
             - test
             - env_exp
       - deploy:
           filters:
             branches:
-              only: master
+              only: main
           requires:
             - approval
 
